# store

./: README.md
feapi/: .mega-linter.yml  Dockerfile  README.md  pyproject.toml
feapi/feapi/: feapp.py  models.py  utils.py
feapi/feapi/db/: connect.py
feapi/feapi/db/models/: __init__.py  item.py  item_count.py  order.py  pallett.py  truck.py
feapi/feapi/resources/: data.json
feapi/tests/: conftest.py  test_full.py  test_full_order.py  test_single.py
imgstab/: .gitlab-ci.yml  Dockerfile  Dockerfile_linters  README.md  docker-compose.yml  kustomization.yaml  pyproject.toml
imgstab/imgstab/: client.py  client.py.bak  server.py  server.py.bak
imgstab/overlay/: deployment.yaml
imgstab/tests/: test_server.py  test_server.py.bak
lib/image/: encode.py
lib/proto/: __init__.py  imgstab.proto  preprocessing.proto
lib/utils/: log_utils.py  start_sentry.py
preprocessing/: .flake8  .gitlab-ci.yml  Dockerfile  Dockerfile_linters  README.md  docker-compose.yml  kustomization.yaml  pyproject.toml
preprocessing/overlay/: deployment.yaml  service.yaml  service_monitor.yaml
preprocessing/preprocessing/: client.py  client.py.bak  preprocessing.py  preprocessing.py.bak  process.py  process_stream.py  process_stream.py.bak  server.py  server.py.bak
preprocessing/tests/: conftest.py  test_server.py  test_server.py.bak
